--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-requirejs-bundler",
   "version": "0.1.0",
-  "description": "A plugin for Gulp",
+  "description": "Gulp plugin: wraps gulp-requirejs, adds ability to emit bundle files and bundle config",
   "keywords": [
     "gulpplugin"
   ],
